mdapi/objects/Distribuzione_Shadow__c/Distribuzione_Shadow__c.object-meta.xml
<CustomObject>
    <label>Distribuzione Shadow</label>
    <nameField>
        <label>Distribuzione Shadow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribuzioni Shadow</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>