mdapi/objects/Distribuzione_Shadow__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Amount_Static__c</columns>
    <columns>Totali_Budget_Anno__c</columns>
    <columns>Donation_Transaction_Allocation__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Status_Static__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>